# arduino-bitneural32

./: CMakeLists.txt  README.md  keywords.txt  library.properties
examples/: examples.h
examples/Audio_Classification/: Audio_Classification.ino
examples/Basic_Inference_with_Metrics/: Basic_Inference_with_Metrics.ino
examples/Dual-Core_Processing/: Dual-Core_Processing.ino
examples/LSTM/: LSTM.ino
examples/Multi-Model_with_RAM_Protection/: Multi-Model_with_RAM_Protection.ino
src/: BitNeural32.h  bitneural.c  bitneural.h  bitneural_config.h  kernels.c
